Add about verticle