@@ -3,16 +3,17 @@ package dburyak.demo.mybooks.auth.app;
 import dburyak.demo.mybooks.MicronautVerticleProducer;
 import dburyak.demo.mybooks.MicronautVertxApplication;
 
-import java.util.Collections;
 import java.util.List;
 
 public class AuthApp extends MicronautVertxApplication {
     public static void main(String[] args) {
-        new AuthApp().start().subscribe();
+        var app = new AuthApp();
+        app.start().subscribe();
+        Runtime.getRuntime().addShutdownHook(new Thread(() -> app.stop().subscribe()));
     }
 
     @Override
     public List<MicronautVerticleProducer> getVerticlesProducers() {
-        return Collections.emptyList();
+        return List.of(new AuthAboutVerticle.Producer());
     }
 }
